--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     check-template-location: true 
 
     # https://github.com/brettwooldridge/HikariCP
-  datasource-hikari-event:
+  datasource-hikari:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
     #hikari url 설정
     jdbcUrl: jdbc:log4jdbc:mariadb://127.0.0.1:3306/WRM
