--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ server:
 spring:
   devtools:
     livereload:
-      enabled: true
+      enabled: false
     restart:
       enabled: false
   mvc:
